major changes to the vertex data type - single Vertex class using variadic template (instead of Vertex1/2/3/4) - Vertex::Array = std::vector<Vertex> - can add/pop attribute to/from Vertex/Array - now the first attribute of a Vertex is always position Changes to the Mesh class - got rid of the unnecessary SimpleInstance class Changes to the PrimitiveFactory class - now possible to directly get mesh of unitbox/fullscreen quad

--- a/cubey/cubey/cubey.vcxproj.filters
+++ b/cubey/cubey/cubey.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="Interfaces.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="TimeManager.h" />
+    <ClInclude Include="VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\debug.glsl">
