restructing how the engine events interface works - serparated interfaces to their own header file, changed names to XXBase - got rid of the systeminit event channel, now the engine calls systeminit event directly from engine init - added ability to push/pop engine event class to/from engine - changed slightly how the UI works - updated all the demos to reflect changes to the engine - implenmented auto xml serialization but has yet to be intergrated into the demos

--- a/cubey/cubey.vcxproj.filters
+++ b/cubey/cubey.vcxproj.filters
@@ -10,14 +10,11 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
-    <ClCompile Include="UI.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Input.cpp" />
-    <ClCompile Include="Interfaces.cpp" />
-    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="TimeManager.cpp" />
-    <ClCompile Include="Config.cpp" />
+    <ClCompile Include="TwUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PrimitiveFactory.h" />
@@ -25,18 +22,20 @@
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Transform.h" />
-    <ClInclude Include="UI.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="cubey.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Input.h" />
-    <ClInclude Include="Interfaces.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="TimeManager.h" />
     <ClInclude Include="VertexArray.h" />
-    <ClInclude Include="Config.h" />
+    <ClInclude Include="SingletonBase.h" />
+    <ClInclude Include="EngineEventsBase.h" />
+    <ClInclude Include="TwUI.h" />
+    <ClInclude Include="AutoXmlBase.h" />
+    <ClInclude Include="AutoXmlTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\debug.glsl">
