--- a/cubey/cubey.vcxproj
+++ b/cubey/cubey.vcxproj
@@ -93,34 +93,33 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Config.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Input.cpp" />
-    <ClCompile Include="Interfaces.cpp" />
-    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PrimitiveFactory.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="TimeManager.cpp" />
-    <ClCompile Include="UI.cpp" />
+    <ClCompile Include="TwUI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AutoXmlTypes.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Config.h" />
+    <ClInclude Include="AutoXmlBase.h" />
     <ClInclude Include="cubey.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="EngineEventsBase.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Input.h" />
-    <ClInclude Include="Interfaces.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="PrimitiveFactory.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="SingletonBase.h" />
     <ClInclude Include="TimeManager.h" />
     <ClInclude Include="Transform.h" />
-    <ClInclude Include="UI.h" />
+    <ClInclude Include="TwUI.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="VertexArray.h" />
   </ItemGroup>
