--- a/cubey/cubey.vcxproj
+++ b/cubey/cubey.vcxproj
@@ -92,6 +92,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\include\tinyxml2.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Input.cpp" />
@@ -103,6 +104,7 @@
     <ClCompile Include="TwUI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\tinyxml2.h" />
     <ClInclude Include="AutoXmlTypes.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="AutoXmlBase.h" />
