--- a/cubey2/cubey2.vcxproj
+++ b/cubey2/cubey2.vcxproj
@@ -96,12 +96,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cubey.h" />
+    <ClInclude Include="DuoBuffer.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="ServiceLocator.h" />
+    <ClInclude Include="ThreadMgr.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Logger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
