--- a/cubey2/cubey2.vcxproj
+++ b/cubey2/cubey2.vcxproj
@@ -95,16 +95,21 @@
     <None Include="shaders\debug.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\..\Code\GitRepos\cubey\cubey2\DuoBufferMTB.h" />
     <ClInclude Include="Cubey.h" />
     <ClInclude Include="DuoBuffer.h" />
+    <ClInclude Include="DuoBufferMTNB.h" />
     <ClInclude Include="Engine.h" />
-    <ClInclude Include="Logger.h" />
+    <ClInclude Include="ILogger.h" />
+    <ClInclude Include="ConsoleLogger.h" />
+    <ClInclude Include="LoggerUtil.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="ThreadMgr.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="ConsoleLogger.cpp" />
+    <ClCompile Include="LoggerUtil.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
