--- a/cubey2/cubey2.vcxproj.filters
+++ b/cubey2/cubey2.vcxproj.filters
@@ -14,12 +14,17 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Cubey.h" />
     <ClInclude Include="ServiceLocator.h" />
-    <ClInclude Include="Logger.h" />
     <ClInclude Include="ThreadMgr.h" />
     <ClInclude Include="DuoBuffer.h" />
+    <ClInclude Include="..\..\..\..\..\..\Code\GitRepos\cubey\cubey2\DuoBufferMTB.h" />
+    <ClInclude Include="DuoBufferMTNB.h" />
+    <ClInclude Include="ILogger.h" />
+    <ClInclude Include="LoggerUtil.h" />
+    <ClInclude Include="ConsoleLogger.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="LoggerUtil.cpp" />
+    <ClCompile Include="ConsoleLogger.cpp" />
   </ItemGroup>
 </Project>
