Fixed project settings
fixed errors on project settings

--- a/fractal_2d_demo/fractal_2d_demo.vcxproj
+++ b/fractal_2d_demo/fractal_2d_demo.vcxproj
@@ -15,7 +15,7 @@
     <ClCompile Include="FractalDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\debug.glsl" />
+    <None Include="shaders\fractal_2d.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FractalDemo.h" />
